--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ __pycache__
 
 data/interim/pollutants.csv
 data/processed/clean_pollutants.csv
+data/processed/clean_df.csv
+data/processed/factorize_df.csv
