--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
 __pycache__
 .env
 .learn
+
+data/interim/pollutants.csv
+data/processed/clean_df.csv
+data/processed/clean_pollutants.csv
+data/processed/factorize_df.csv
+data/processed/pollution.csv
+data/processed/weather.csv
+
+data/raw/daily data 2022
+data/raw/time data 2022
+data/raw/pollution data
+data/raw/irregular data 2022
