--- a/notebooks/requirements.txt
+++ b/notebooks/requirements.txt
@@ -6,7 +6,7 @@ opencv-python>=4.1.2
 pandas>=1.5.3
 python-dotenv>=0.20.0
 requests>=2.27.1
-scikit-learn>=1.4.0
+scikit-learn>=1.3.2
 seaborn>=0.12.2
-streamlit
+streamlit==1.31.0
 joblib
