--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@ __pycache__
 .env
 .learn
 data/interim/pollutants.csv
-data/processed/clean_pollutants.csv
-data/processed/clean_df.csv
-data/processed/factorize_csv
+# data/processed/clean_pollutants.csv
+# data/processed/clean_df.csv
+# data/processed/factorize_csv
